# rabbitMQ-client-server

client/: client.py  config.ini  logger.py  main.py  protocol.proto  protocol_pb2.py  protocol_pb2.pyi  requirements.txt  settings_window.py  window.py
server/: CMakeLists.txt  config.ini  main.cpp
server/include/: ConfigParser.h  Consumer.h  EventQueue.h  Producer.h  Server.h
server/src/: Consumer.cpp  EventQueue.cpp  Producer.cpp  Server.cpp
